# geographic_coordinates

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  LICENSE  ProjectOptions.cmake  README.md
.github/workflows/: ci.yml
cmake/: geographic_coordinatesConfig.cmake.in
examples/geographic_coordinates/: CMakeLists.txt  example_conversions.cc
python/: CMakeLists.txt  geographic_coordinates.py  geographic_coordinates_c_api.cc  geographic_coordinates_c_api.hh
python/tests/: test_geodetic_transformations.py
src/: geographic_coordinates.cc  geographic_coordinates.hh
src/geographic_coordinates/: CMakeLists.txt  geodetic_transformations.cc
src/geographic_coordinates/include/geographic_coordinates/: geodetic_transformations.hh
test/: CMakeLists.txt  test_1.cc
test/geographic_coordinates/: CMakeLists.txt  test_geodetic_transformations.cc
